--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>QR Code Component</title>
 
 </head>
 
 <body>
-    <div>
+    <main>
         <div class="container">
-            <img src="image-qr-code.png" alt="qr">
+            <img src="image-qr-code.png" alt="QR Code">
             <div class="text">
                 <h1>Improve your front-end skills by building projects</h1>
                 <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
